--- a/app/views/kistings/index.html.erb
+++ b/app/views/kistings/index.html.erb
@@ -53,6 +53,6 @@
 <br>
 
 
-<%<% if user_signed_in? %>
+<% if user_signed_in? %>
 <%= link_to 'New Listing', new_kisting_path, class: "btn btn-link" %>
 <% end %>
