--- a/app/views/kistings/show.html.erb
+++ b/app/views/kistings/show.html.erb
@@ -7,9 +7,9 @@
 	<div class="col-md-6">
 		<h3><%= @kisting.name %></h3>
 		<p>
-			Price(When Buying): <%= number_to_currency(@kisting.sellprice) %></p>
+			Price(When Buying): <%= number_to_currency(@kisting.sellprice, unit: "UGX  ") %></p>
 		<p>
-			Price(For Rent): <%= number_to_currency(@kisting.rentprice) %></p>
+			Price(For Rent): <%= number_to_currency(@kisting.rentprice, unit: "UGX  ") %></p>
 		<p>
 			<strong>Description:</strong>
 			<%= @kisting.description %></p>
