--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -7,9 +7,9 @@
 	<div class="col-md-6">
 		<h3><%= @listing.name %></h3>
 		<p>
-			Price(When Buying): <%= number_to_currency(@listing.sellprice) %></p>
+			Price(When Buying): <%= number_to_currency(@listing.sellprice, unit: "UGX  ") %></p>
 		<p>
-			Price(For Rent): <%= number_to_currency(@listing.rentprice) %></p>
+			Price(For Rent): <%= number_to_currency(@listing.rentprice, unit: "UGX  ") %></p>
 		<p>
 			<strong>Description:</strong>
 			<%= @listing.description %></p>
