--- a/app/views/kistings/index.html.erb
+++ b/app/views/kistings/index.html.erb
@@ -25,7 +25,9 @@
 
  <div class="row">
  <% @kistings.each do |kisting| %>
- <div class="col-xs-12 col-md-4">
+
+ <div class="col-xs-10 col-md-4">
+  <div class="center">
    <div class="thumbnail nnx">
     <%= link_to image_tag(kisting.image.url), kisting %>
 
@@ -41,6 +43,7 @@
    
        
   </div>
+   </div>
 
  <h4><%= kisting.name %></h4>
 
