--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -29,7 +29,9 @@
 
  <div class="row">
  <% @listings.each do |listing| %>
- <div class="col-xs-12 col-md-4">
+
+ <div class="col-xs-10 col-md-4">
+  <div class="center">
    <div class="thumbnail nnx">
     <%= link_to image_tag(listing.image.url), listing %>
 
@@ -45,6 +47,7 @@
    
        
   </div>
+   </div>
 
  <h4><%= listing.name %></h4>
 
