--- a/app/views/sistings/index.html.erb
+++ b/app/views/sistings/index.html.erb
@@ -25,9 +25,7 @@
 
  <div class="row">
  <% @sistings.each do |sisting| %>
-
- <div class="col-xs-10 col-md-4">
-  <div class="center">
+ <div class="col-md-4">
    <div class="thumbnail nnx">
     <%= link_to image_tag(sisting.image.url), sisting %>
 
@@ -43,7 +41,6 @@
    
        
   </div>
-   </div>
 
  <h4><%= sisting.name %></h4>
 
