--- a/app/views/kistings/index.html.erb
+++ b/app/views/kistings/index.html.erb
@@ -25,9 +25,7 @@
 
  <div class="row">
  <% @kistings.each do |kisting| %>
-
- <div class="col-xs-10 col-md-4">
-  <div class="center">
+ <div class="col-md-4">
    <div class="thumbnail nnx">
     <%= link_to image_tag(kisting.image.url), kisting %>
 
@@ -43,7 +41,6 @@
    
        
   </div>
-   </div>
 
  <h4><%= kisting.name %></h4>
 
