--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -29,9 +29,7 @@
 
  <div class="row">
  <% @listings.each do |listing| %>
-
- <div class="col-xs-10 col-md-4">
-  <div class="center">
+ <div class="col-md-4">
    <div class="thumbnail nnx">
     <%= link_to image_tag(listing.image.url), listing %>
 
@@ -47,7 +45,6 @@
    
        
   </div>
-   </div>
 
  <h4><%= listing.name %></h4>
 
