--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row">
 
-  <div class="col-xs-6 col-md-4">
+  <div class="col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/epnycvm9ix0364o/3.jpg" alt="">
 
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="col-xs-6 col-md-4">
+  <div class="col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/nqcsh0yxwpa3oyz/4.jpg" alt="">
 
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <div class="col-xs-6 col-md-4">
+  <div class="col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/fm51bqyvbe0iq2c/5.jpg" alt="">
 
