--- a/app/views/kistings/index.html.erb
+++ b/app/views/kistings/index.html.erb
@@ -25,7 +25,7 @@
 
  <div class="row">
  <% @kistings.each do |kisting| %>
- <div class="col-md-4">
+ <div class="col-xs-6 col-md-4">
    <div class="thumbnail nnx">
     <%= link_to image_tag(kisting.image.url), kisting %>
 
