--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,10 @@
 <p>Whether your style is classic and traditional or bold and dramatic — it all starts with how your gown makes you feel.</p>
 </div>
 
+<div class = "center" >
 <div class="row">
 
-  <div class="col-md-4">
+  <div class="col-xs-11 col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/epnycvm9ix0364o/3.jpg" alt="">
 
@@ -22,7 +23,7 @@
     </div>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xs-11 col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/nqcsh0yxwpa3oyz/4.jpg" alt="">
 
@@ -36,7 +37,7 @@
     </div>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xs-11 col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/fm51bqyvbe0iq2c/5.jpg" alt="">
 
@@ -50,6 +51,7 @@
     </div>
   </div>
 
+</div>
 </div>
 
 <% render 'pages/footimage' %>
