--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
 
   <div class="col-xs-11 col-md-4">
-    <div class="thumbnail nn center-block">
+    <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/epnycvm9ix0364o/3.jpg" alt="">
 
       <% link_to image_tag("") %>
@@ -24,7 +24,7 @@
   </div>
 
   <div class="col-xs-11 col-md-4">
-    <div class="thumbnail nn center-block">
+    <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/nqcsh0yxwpa3oyz/4.jpg" alt="">
 
       <% link_to image_tag("") %>
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="col-xs-11 col-md-4 center-block">
+  <div class="col-xs-11 col-md-4">
     <div class="thumbnail nn">
     	<img class="img-responsive" src="https://dl.dropboxusercontent.com/s/fm51bqyvbe0iq2c/5.jpg" alt="">
 
