--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,7 +52,7 @@ text-align: center;
 .nn {
    width: 350px;
    height: 500px;
-   float: right;
+   float: left;
    overflow: hidden;
    position: relative;
    text-align: center;
